--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body{
     height: 810px;
     margin-left: 50px;
     margin-right: 50px;
+    margin-bottom: 0px;
 }
 .new-text{
 
@@ -21,8 +22,7 @@ body{
     font-weight: 400;
     text-align: center;
     margin: 0px 0px 0px 0px; 
-
-padding: 20px 20px 20px 20px;
+    padding: 20px 20px 20px 20px;
     
 }
 .new-text h1{
@@ -32,4 +32,39 @@ padding: 20px 20px 20px 20px;
     text-align: center;
     margin: 0px 0px 0px 0px; 
 
+}
+
+/* holiday part */
+.holiday-deal{
+    text-align: center;
+}
+.holiday-deal h1{
+    color: rgb(255, 0, 0);
+font-family: Inter;
+font-size: 88px;
+font-weight: 700;
+margin-top: 120px;
+margin-bottom: 0px;
+
+}
+.holiday-deal h5{
+    color: rgb(255, 0, 0);
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 500;
+    margin-top: 49px;
+    margin-bottom: 0px;
+
+}
+.holiday-deal h2{
+    color: rgb(7, 2, 17);
+    font-family: Inter;
+    font-size: 48px;
+    font-weight: 700;
+    margin-top: 16px;
+    margin-bottom: 0px;
+
+}
+.holiday-deal img{
+    margin-top: 47px;
 }
