--- a/style.css
+++ b/style.css
@@ -400,3 +400,85 @@ margin-right: 440px;
     font-weight: 600;
     margin-top: 48px;
 }
+
+/* footer part */
+.full-details-foot{
+    background-color: black;
+    height: 600px;
+}
+.address-foot{
+    display: flex;
+    justify-content: space-between;
+   
+}
+.address-location{
+    margin-top: 150px;
+    margin-left: 300px;
+    padding-right: 950px;
+    color: rgb(255, 255, 255);
+    font-family: "Inter", sans-serif;
+    font-size: 24px;
+    font-weight: 500;
+}
+
+.foot-phone{
+    display: flex;
+    margin-top: 150px;
+    padding-left: -100px;
+    margin-left: -400px;
+    margin-bottom: 5px;
+}
+.foot-phone p{
+    margin-top: -0.09px;
+    margin-left: 20px;
+    color: white;
+}
+.foot-phone img{
+    border: 2px dashed white;
+}
+.foot-website{
+    display: flex;
+    padding-left: -100px;
+    margin-left: -400px;
+
+}
+.website{
+    margin-top: -1px;
+    margin-left: 20px;
+    color: white;
+}
+.phone-website{
+    margin-right: 150px;
+}
+.foot-website img{
+    border: 2px dashed white;
+}
+hr{
+    border: 1px solid rgba(255, 255, 255, 0.15);
+    position: absolute;
+    width: 1320px;
+    margin-left: 300px;
+
+}
+
+.social{
+    text-align: center;
+    padding-top: 60px;
+    padding-bottom: 60px;
+}
+.social img{
+    margin-right: 25px;
+    border: 2px dashed white;
+}
+.right-uns{
+    display: flex;
+    margin-left: 300px;
+    margin-top: 50px;
+}
+.right{
+    color: white;
+}
+.unscr{
+    color: white;
+    margin-left: 1060px;
+}
